Fix build errors

--- a/architecture/control-plane.adoc
+++ b/architecture/control-plane.adoc
@@ -31,17 +31,17 @@ endif::openshift-dedicated,openshift-rosa[]
 ifndef::openshift-dedicated,openshift-rosa[]
 [role="_additional-resources"]
 .Additional resources
-* xref:../machine_configuration/machine-config-pool-custom.adoc#machine-config-pool-custom[Using custom machine config pools to configure nodes]
+* xref:../machine_configuration/machine-configs-configure.adoc#machine-configs-configure[Configure nodes by using machine config objects]
 * xref:../machine_configuration/index.adoc#machine-config-drift-detection_machine-config-overview[Understanding configuration drift detection]
 * xref:../nodes/nodes/nodes-nodes-creating-infrastructure-nodes.adoc#nodes-nodes-creating-infrastructure-nodes[Creating infrastructure nodes]
 endif::openshift-dedicated,openshift-rosa[]
 
-include::modules/machine-config-pool-custom.adoc[leveloffset=+2]
+include::modules/machine-config-pools-custom.adoc[leveloffset=+2]
 
 ifndef::openshift-dedicated,openshift-rosa[]
 [role="_additional-resources"]
 .Additional resources
-* xref:../machine_configuration/machine-config-pool-custom.adoc#machine-config-pool-custom[About using custom machine config pools to configure nodes]
+* xref:../machine_configuration/machine-configs-configure.adoc#machine-configs-configure[Configure nodes by using machine config objects]
 endif::openshift-dedicated,openshift-rosa[]
 
 include::modules/architecture-machine-roles.adoc[leveloffset=+1]
