--- a/machine_configuration/index.adoc
+++ b/machine_configuration/index.adoc
@@ -32,7 +32,7 @@ include::modules/machine-config-change.adoc[leveloffset=+2]
 [role="_additional-resources"]
 .Additional resources
 
-* xref:../machine_configuration/machine-config-pool-custom.adoc#machine-config-pool-custom[About using custom machine config pools to configure nodes]
+* xref:../machine_configuration/machine-config-pools-about.adoc#machine-config-pools-about[About machine config pools]
 
 include::modules/machine-config-node-drain.adoc[leveloffset=+1]
 
