--- a/machine_configuration/machine-config-pools-about.adoc
+++ b/machine_configuration/machine-config-pools-about.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 :context: machine-config-pools-about
-[id="machine-config-about"]
+[id="machine-config-pools-about"]
 = About machine config pools
 include::_attributes/common-attributes.adoc[]
 
@@ -11,12 +11,12 @@ By default, there are two machine config pools (MCP) created by the cluster when
 
 In addition, you can apply changes to specific sets of worker nodes by using _custom machine config pools_. 
 
-For information on configuring nodes by using machine config objects, see xref:../machine_configuration/machine-configs-configure.adoc#machine-configs-configure[Using machine config objects to configure nodes]
+For information on configuring nodes by using machine config objects, see xref:../machine_configuration/machine-configs-configure.adoc#machine-configs-configure[Configure nodes by using machine config objects]
 
 include::modules/architecture-machine-config-pools.adoc[leveloffset=+1]
 include::modules/checking-mco-status.adoc[leveloffset=+1]
 include::modules/checking-mco-node-status.adoc[leveloffset=+1]
-include::modules/machine-config-pool-custom.adoc[leveloffset=+1]
+include::modules/machine-config-pools-custom.adoc[leveloffset=+1]
 include::modules/machine-config-pools-custom-configure.adoc[leveloffset=+2]
 include::modules/machine-config-pools-custom-modify.adoc[leveloffset=+2]
 include::modules/machine-config-pools-custom-removing.adoc[leveloffset=+2]
