--- a/modules/machine-config-pools-custom-configure.adoc
+++ b/modules/machine-config-pools-custom-configure.adoc
@@ -1,16 +1,16 @@
 // Module included in the following assemblies:
 //
-// * machine_configuration/machine-config-about.adoc
+// * machine_configuration/machine-config-pools-about.adoc
 
-:_content-type: PROCEDURE
+:_mod-docs-content-type: PROCEDURE
 [id="machine-config-pools-custom-configure_{context}"]
 = Creating a custom machine config pool
 
-To create a custom machine config pool, you create a `MachineConfigPool` object that contains a custom role as the `machineConfigSelector`. 
+To create a custom machine config pool, you create a `MachineConfigPool` object that contains a custom role as the `machineConfigSelector`.
 
-The following procedure creates a custom machine config pool named `infra` that is also associated with the `worker` machine config pool. 
+The following procedure creates a custom machine config pool named `infra` that is also associated with the `worker` machine config pool.
 
-.Procedure 
+.Procedure
 
 . Create a YAML file that defines your custom machine config pool:
 +
@@ -76,7 +76,7 @@ rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad    40d03dc1376995a2d65e10af48287
 ----
 <1> This is custom machine config pool.
 
-. Add a node to a custom machine config pool: 
+. Add a node to a custom machine config pool:
 
 .. Add a custom role label to the node by using the following command
 +
@@ -101,7 +101,7 @@ infra    rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad    True      False     
 master   rendered-master-b1d4b6196a18869d63518e57b8b335d1   True      False      False      3              3                   3                     0                      156m
 worker   rendered-worker-c48ef626ff01f0a445979a4245dc7bdd   True      False      False      2              2                   2                     0                      156m
 ----
-<1> The `infra` custom machine config pool now reports having one node, which you just added. 
+<1> The `infra` custom machine config pool now reports having one node, which you just added.
 
 . View the new machine config by using the following command:
 +
