--- a/modules/machine-config-pools-custom-modify.adoc
+++ b/modules/machine-config-pools-custom-modify.adoc
@@ -1,8 +1,8 @@
 // Module included in the following assemblies:
 //
-// * machine_configuration/machine-config-pool-custom.adoc
+// * machine_configuration/machine-config-pools-custom.adoc
 
-:_content-type: PROCEDURE
+:_mod-docs-content-type: PROCEDURE
 [id="machine-config-pools-custom-modify_{context}"]
 = Modifying a custom machine config pool
 
@@ -47,7 +47,7 @@ worker   rendered-worker-93ac02b5fc2e2526b8b15758df3d8472   True      False     
 
 Changes made to the custom machine config are not applied to the `worker` machine config.
 
-However, if you make a change to the `worker` machine config pool, the change is applied to the `worker` and custom machine config pools and their associated nodes. 
+However, if you make a change to the `worker` machine config pool, the change is applied to the `worker` and custom machine config pools and their associated nodes.
 
 [source,terminal]
 ----
@@ -80,4 +80,3 @@ rendered-worker-d177d1547e6d6d5820876783942b6fc9   b29dceb12638f3d7f30f339729344
 ----
 <1> New rendered custom machine config in response to the change.
 <2> New rendered worker machine config in response to the change.
-
