--- a/modules/machine-config-pools-custom-removing.adoc
+++ b/modules/machine-config-pools-custom-removing.adoc
@@ -1,12 +1,12 @@
 // Module included in the following assemblies:
 //
-// * machine_configuration/machine-config-pool-custom.adoc
+// * machine_configuration/machine-config-pools-custom.adoc
 
-:_content-type: PROCEDURE
+:_mod-docs-content-type: PROCEDURE
 [id="machine-config-pools-custom-removing_{context}"]
 = Removing a node from a machine config pool
 
-To remove a node from a custom machine config pool, remove the associated role label from the custom node. 
+To remove a node from a custom machine config pool, remove the associated role label from the custom node.
 
 Because each node must have a role at all times to properly function. If you have a purely custom node, you should first apply a worker role label to the node before you remove the custom role label.
 
