--- a/modules/machine-config-pools-custom.adoc
+++ b/modules/machine-config-pools-custom.adoc
@@ -1,6 +1,6 @@
 // Module included in the following assemblies:
 //
-// * machine_configuration/machine-config-about.adoc
+// * machine_configuration/machine-config-pools-about.adoc
 
 ifeval::["{context}" == "machine-config-pools-about"]
 :machine-mgmt:
@@ -10,17 +10,17 @@ ifeval::["{context}" == "control-plane"]
 endif::[]
 
 ifdef::machine-mgmt[]
-:_content-type: PROCEDURE
-[id="machine-config-pool-custom_{context}"]
+:_mod-docs-content-type: PROCEDURE
+[id="machine-config-pools-custom_{context}"]
 = About using custom machine config pools to configure nodes
 endif::machine-mgmt[]
 ifdef::control-plane[]
-:_content-type: PROCEDURE
-[id="machine-config-pool-custom_{context}"]
+:_mod-docs-content-type: PROCEDURE
+[id="machine-config-pools-custom_{context}"]
 = Node configuration management with custom machine config pools
 endif::control-plane[]
 
-You can apply machine configuration changes to specific sets of worker nodes by using _custom machine config pools_. A custom machine config pool manages its own sets of nodes, which are indicated with a node label. One example of this is a set of infrastructure nodes that host infrastructure components, such as the router or the image registry.   
+You can apply machine configuration changes to specific sets of worker nodes by using _custom machine config pools_. A custom machine config pool manages its own sets of nodes, which are indicated with a node label. One example of this is a set of infrastructure nodes that host infrastructure components, such as the router or the image registry.
 
 Custom machine config pools are based on the worker machine config pool. As such, custom pools inherit their initial configuration from the `worker` pool and any change to the `worker` pool is applied to the custom pool. Changes to the custom pool are not inherited by the `worker` pool.
 
@@ -31,7 +31,7 @@ You cannot use a master machine config pool to create a custom pool.
 
 Note the following characteristics about nodes and machine config pools:
 
-* A node can only be included in one machine config pool. 
+* A node can only be included in one machine config pool.
 * A node must be included in a machine config pool for the node to function properly.
 * If a node has multiple labels that correspond to different pools, such as `worker,infra`, the node is managed by the custom pool, not the `worker` pool. Custom pools take priority on selecting nodes to manage based on node labels.
 * If a node has the `worker,infra` label, but you do not have an `infra` machine config pool, the node is considered a worker node.
@@ -39,7 +39,7 @@ Note the following characteristics about nodes and machine config pools:
 
 [NOTE]
 ====
-If a custom node reboots, the node reboots into the `worker` machine config pool. You need to reapply the custom label to that node to place the node back in the custom pool. 
+If a custom node reboots, the node reboots into the `worker` machine config pool. You need to reapply the custom label to that node to place the node back in the custom pool.
 ====
 
 ifeval::["{context}" == "machine-config-pools-about"]
@@ -48,4 +48,3 @@ endif::[]
 ifeval::["{context}" == "control-plane"]
 :!control-plane:
 endif::[]
-
