--- a/modules/create-a-kubeletconfig-crd-to-edit-kubelet-parameters.adoc
+++ b/modules/create-a-kubeletconfig-crd-to-edit-kubelet-parameters.adoc
@@ -140,20 +140,18 @@ For example:
 $ oc describe node ci-ln-5grqprb-f76d1-ncnqq-worker-a-mdv94
 ----
 +
-Look for `pods: <value>` in the `Allocatable` stanza:
+Look for `value: pods: <value>` in the `Allocatable` stanza:
 +
 .Example output
 [source,terminal]
 ----
-# ...
 Allocatable:
-  cpu:                3500m
-  ephemeral-storage:  122076772149
-  hugepages-1Gi:      0
-  hugepages-2Mi:      0
-  memory:             15222812Ki
-  pods:               250
-# ...
+ attachable-volumes-aws-ebs:  25
+ cpu:                         3500m
+ hugepages-1Gi:               0
+ hugepages-2Mi:               0
+ memory:                      15341844Ki
+ pods:                        250
 ----
 
 . Set the maximum pods per node on the worker nodes by creating a custom resource file that contains the kubelet configuration:
