--- a/machine_configuration/machine-config-pools-about.adoc
+++ b/machine_configuration/machine-config-pools-about.adoc
@@ -7,17 +7,19 @@ include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
-By default, there are two machine config pools (MCP) created by the cluster when it is installed: `master` and `worker`.  Each MCP manages a set of nodes and applies changes made through a machine config to the appropriate nodes. 
+Machines that run control plane components or user workloads are divided into groups based on the types of resources they handle. These groups of machines are called machine config pools (MCP). Each MCP manages a set of nodes and its corresponding machine configs. The role of the node determines which MCP it belongs to; the MCP governs nodes based on its assigned node role label. Nodes in an MCP have the same configuration; this means nodes can be scaled up and torn down in response to increased or decreased workloads.
 
-In addition, you can apply changes to specific sets of worker nodes by using _custom machine config pools_. 
+By default, there are two MCPs created by the cluster when it is installed: `master` and `worker`. Each default MCP has a defined configuration applied by the Machine Config Operator (MCO), which is responsible for managing MCPs and facilitating MCP upgrades.
+
+In addition to the default, you can apply changes to specific sets of worker nodes by using _custom machine config pools_. For more information, see xref:../machine_configuration/machine-config-pools-about.adoc#machine-config-pools-custom_machine-config-pools-about[About using custom machine config pools to configure nodes].
+
+The MCO applies updates for pools independently; for example, if there is an update that affects all pools, nodes from each pool update in parallel with each other. If you add a custom pool, nodes from that pool also attempt to update concurrently with the master and worker nodes.
 
 For information on configuring nodes by using machine config objects, see xref:../machine_configuration/machine-configs-configure.adoc#machine-configs-configure[Configure nodes by using machine config objects]
 
-include::modules/architecture-machine-config-pools.adoc[leveloffset=+1]
 include::modules/checking-mco-status.adoc[leveloffset=+1]
 include::modules/checking-mco-node-status.adoc[leveloffset=+1]
 include::modules/machine-config-pools-custom.adoc[leveloffset=+1]
 include::modules/machine-config-pools-custom-configure.adoc[leveloffset=+2]
 include::modules/machine-config-pools-custom-modify.adoc[leveloffset=+2]
 include::modules/machine-config-pools-custom-removing.adoc[leveloffset=+2]
-
