--- a/modules/machine-config-pools-custom.adoc
+++ b/modules/machine-config-pools-custom.adoc
@@ -2,27 +2,15 @@
 //
 // * machine_configuration/machine-config-pools-about.adoc
 
-ifeval::["{context}" == "machine-config-pools-about"]
-:machine-mgmt:
-endif::[]
-ifeval::["{context}" == "control-plane"]
-:control-plane:
-endif::[]
-
-ifdef::machine-mgmt[]
-:_mod-docs-content-type: PROCEDURE
+:_mod-docs-content-type: CONCEPT
 [id="machine-config-pools-custom_{context}"]
 = About using custom machine config pools to configure nodes
-endif::machine-mgmt[]
-ifdef::control-plane[]
-:_mod-docs-content-type: PROCEDURE
-[id="machine-config-pools-custom_{context}"]
-= Node configuration management with custom machine config pools
-endif::control-plane[]
 
 You can apply machine configuration changes to specific sets of worker nodes by using _custom machine config pools_. A custom machine config pool manages its own sets of nodes, which are indicated with a node label. One example of this is a set of infrastructure nodes that host infrastructure components, such as the router or the image registry.
 
-Custom machine config pools are based on the worker machine config pool. As such, custom pools inherit their initial configuration from the `worker` pool and any change to the `worker` pool is applied to the custom pool. Changes to the custom pool are not inherited by the `worker` pool.
+Custom machine config pools are based on the worker machine config pool. As such, custom pools inherit their initial configuration from the `worker` pool and any change to the `worker` pool is applied to the custom pool. Changes to the custom pool are not inherited by the `worker` pool. As such, custom machine config pools add the ability to deploy changes only targeted at the custom pool.
+
+It is recommended to have a custom pool for every node role you want to manage in your cluster. For example, if you create infra nodes to handle infra workloads, it is recommended to create a custom infra MCP to group those nodes together. If you apply an `infra` role label to a worker node so it has the `worker,infra` dual label, but do not have a custom `infra` MCP, the MCO considers it a worker node. If you remove the `worker` label from a node and apply the `infra` label without grouping it in a custom pool, the node is not recognized by the MCO and is unmanaged by the cluster.
 
 [NOTE]
 ====
@@ -41,10 +29,3 @@ Note the following characteristics about nodes and machine config pools:
 ====
 If a custom node reboots, the node reboots into the `worker` machine config pool. You need to reapply the custom label to that node to place the node back in the custom pool.
 ====
-
-ifeval::["{context}" == "machine-config-pools-about"]
-:!machine-mgmt:
-endif::[]
-ifeval::["{context}" == "control-plane"]
-:!control-plane:
-endif::[]
