--- a/modules/mirror-registry-ssl-cert-replace.adoc
+++ b/modules/mirror-registry-ssl-cert-replace.adoc
@@ -58,5 +58,5 @@ $ cp ~/ssl.key $QUAY/quay-config
 +
 [source,terminal]
 ----
-$ systemctl restart quay-app
+$ systemctl restart quay-app --user
 ----
