OSDOCS-11411 Adding multiarch scheduling section for ROSA and OSD

--- a/modules/multi-architecture-scheduling-examples.adoc
+++ b/modules/multi-architecture-scheduling-examples.adoc
@@ -4,10 +4,11 @@
 
 :_mod-docs-content-type: CONCEPT
 [id="multi-architecture-scheduling-examples_{context}"]
-
 = Sample multi-architecture node workload deployments
 
+ifdef::openshift-rosa,openshift-rosa-hcp[]
 Before you schedule workloads on a cluster with compute nodes of different architectures, consider the following use cases:
+endif::openshift-rosa,openshift-rosa-hcp[]
 
 Using node affinity to schedule workloads on a node:: You can allow a workload to be scheduled on only a set of nodes with architectures supported by its images, you can set the `spec.affinity.nodeAffinity` field in your pod's template specification.
 +
@@ -35,6 +36,8 @@ spec:
 ----
 <1> Specify the supported architectures. Valid values include `amd64`,`arm64`, or both values.
 
+//Omitting taint and toleration based examples from ROSA docs
+ifndef::openshift-rosa,openshift-rosa-hcp[]
 Tainting every node for a specific architecture:: You can taint a node to avoid workloads that are not compatible with its architecture to be scheduled on that node. In the case where your cluster is using a `MachineSet` object, you can add parameters to the `.spec.template.spec.taints` field to avoid workloads being scheduled on nodes with non-supported architectures.
 
 * Before you can taint a node, you must scale down the `MachineSet` object or remove available machines. You can scale down the machine set by using one of following commands:
@@ -137,3 +140,4 @@ spec:
         operator: "Equal"
         effect: "NoSchedule"
 ----
+endif::openshift-rosa,openshift-rosa-hcp[]
