--- a/post_installation_configuration/configuring-multi-arch-compute-machines/multi-architecture-compute-managing.adoc
+++ b/post_installation_configuration/configuring-multi-arch-compute-machines/multi-architecture-compute-managing.adoc
@@ -1,4 +1,8 @@
 :_mod-docs-content-type: ASSEMBLY
+// NOTE: This file is the target of the following symbolic link:
+// - nodes/scheduling/multi-architecture-compute-scheduling.adoc
+//For non-ROSA builds
+ifndef::openshift-rosa,openshift-rosa-hcp[]
 :context: multi-architecture-compute-managing
 [id="multi-architecture-compute-managing"]
 = Managing a cluster with multi-architecture compute machines
@@ -8,26 +12,48 @@ toc::[]
 
 == Scheduling workloads on clusters with multi-architecture compute machines
 
+endif::openshift-rosa,openshift-rosa-hcp[]
+
+//For ROSA builds
+ifdef::openshift-rosa,openshift-rosa-hcp[]
+:context: multi-architecture-compute-scheduling
+[id="multi-architecture-compute-scheduling"]
+= Scheduling workloads on clusters with multi-architecture compute machines
+include::_attributes/common-attributes.adoc[]
+
+toc::[]
+
+[IMPORTANT]
+====
+Multi-architecture compute machines are supported only for {product-title} with {hcp}.
+====
+endif::openshift-rosa,openshift-rosa-hcp[]
+
 Deploying a workload on a cluster with compute nodes of different architectures requires attention and monitoring of your cluster. There might be further actions you need to take in order to successfully place pods in the nodes of your cluster.
 
-You can use the Multiarch Tuning Operator to enable architecture-aware scheduling of workloads on clusters with multi-architecture compute machines. The Multiarch Tuning Operator implements additional scheduler predicates in the pods specifications based on the architectures that the pods can support at creation time. For more information, see xref:../../post_installation_configuration/configuring-multi-arch-compute-machines/multiarch-tuning-operator.adoc#multiarch-tuning-operator[Managing workloads on multi-architecture clusters by using the Multiarch Tuning Operator]. 
+//Omitted from ROSA builds until operator is fully supported
+ifndef::openshift-rosa,openshift-rosa-hcp[]
+You can use the Multiarch Tuning Operator to enable architecture-aware scheduling of workloads on clusters with multi-architecture compute machines. The Multiarch Tuning Operator implements additional scheduler predicates in the pods specifications based on the architectures that the pods can support at creation time. For more information, see xref:../../post_installation_configuration/configuring-multi-arch-compute-machines/multiarch-tuning-operator.adoc#multiarch-tuning-operator[Managing workloads on multi-architecture clusters by using the Multiarch Tuning Operator].
 
-For more information on node affinity, scheduling, taints and tolerations, see the following documentation:
+For more information on controlling workload placement, see the following documentation:
 
-ifndef::openshift-dedicated,openshift-rosa[]
+//Omitted from ROSA builds as customers cannot use these methods to set taints and tolerations
 * xref:../../nodes/scheduling/nodes-scheduler-taints-tolerations.adoc#nodes-scheduler-taints-tolerations[Controlling pod placement using node taints].
-endif::openshift-dedicated,openshift-rosa[]
-
 * xref:../../nodes/scheduling/nodes-scheduler-node-affinity.adoc#nodes-scheduler-node-affinity[Controlling pod placement on nodes using node affinity]
-
 * xref:../../nodes/scheduling/nodes-scheduler-about.adoc#nodes-scheduler-about[Controlling pod placement using the scheduler]
+endif::openshift-rosa,openshift-rosa-hcp[]
 
 include::modules/multi-architecture-scheduling-examples.adoc[leveloffset=+2]
 
+//Not included in ROSA builds
+ifndef::openshift-rosa,openshift-rosa-hcp[]
 .Additional resources
-
 * xref:../../machine_management/modifying-machineset.adoc#machineset-modifying_modifying-machineset[Modifying a compute machine set]
+endif::openshift-rosa,openshift-rosa-hcp[]
 
+//Omitted until fully tested with ROSA 
+ifndef::openshift-rosa,openshift-rosa-hcp[]
 include::modules/multi-architecture-enabling-64k-pages.adoc[leveloffset=+1]
 
 include::modules/multi-architecture-import-imagestreams.adoc[leveloffset=+1]
+endif::openshift-rosa,openshift-rosa-hcp[]
