--- a/observability/otel/otel-troubleshooting.adoc
+++ b/observability/otel/otel-troubleshooting.adoc
@@ -8,6 +8,7 @@ toc::[]
 
 The OpenTelemetry Collector offers multiple ways to measure its health as well as investigate data ingestion issues.
 
+include::modules/otel-troubleshoot-gather.adoc[leveloffset=+1]
 include::modules/otel-troubleshoot-collector-logs.adoc[leveloffset=+1]
 include::modules/otel-troubleshoot-metrics.adoc[leveloffset=+1]
 include::modules/otel-troubleshoot-logging-exporter-stdout.adoc[leveloffset=+1]
