--- a/modules/machine-config-pools-custom.adoc
+++ b/modules/machine-config-pools-custom.adoc
@@ -10,7 +10,7 @@ You can apply machine configuration changes to specific sets of worker nodes by 
 
 Custom machine config pools are based on the worker machine config pool. As such, custom pools inherit their initial configuration from the `worker` pool and any change to the `worker` pool is applied to the custom pool. Changes to the custom pool are not inherited by the `worker` pool. As such, custom machine config pools add the ability to deploy changes only targeted at the custom pool.
 
-It is recommended to have a custom pool for every node role you want to manage in your cluster. For example, if you create infra nodes to handle infra workloads, it is recommended to create a custom infra MCP to group those nodes together. If you apply an `infra` role label to a worker node so it has the `worker,infra` dual label, but do not have a custom `infra` MCP, the MCO considers it a worker node. If you remove the `worker` label from a node and apply the `infra` label without grouping it in a custom pool, the node is not recognized by the MCO and is unmanaged by the cluster.
+It is recommended to have a custom pool for every node role you want to manage in your cluster. For example, if you create infra nodes to handle infra workloads, it is recommended to create a custom infra MCP to group those nodes together. 
 
 [NOTE]
 ====
