RHDEVDOCS-6197: Content creation

--- a/modules/gitops-creating-rolloutmanager-custom-resource.adoc
+++ b/modules/gitops-creating-rolloutmanager-custom-resource.adoc
@@ -33,6 +33,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: RolloutManager
 metadata:
   name: argo-rollout
+  namespace: openshift-gitops
   labels:
     example: basic
 spec: {}
