TRACING-4637: add count connector documentation
Signed-off-by: Israel Blancas <iblancas@redhat.com>

--- a/observability/otel/otel-collector/otel-collector-connectors.adoc
+++ b/observability/otel/otel-collector/otel-collector-connectors.adoc
@@ -8,6 +8,120 @@ toc::[]
 
 A connector connects two pipelines. It consumes data as an exporter at the end of one pipeline and emits data as a receiver at the start of another pipeline. It can consume and emit data of the same or different data type. It can generate and emit data to summarize the consumed data, or it can merely replicate or route data.
 
+[id="count-connector_{context}"]
+== Count Connector
+
+The `count` connector is used to count spans, span events, metrics, data points, and log records.
+
+:FeatureName: The Count Connector
+include::snippets/technology-preview.adoc[]
+
+.OpenTelemetry Collector custom resource with an enabled Count Connector
+[source,yaml]
+----
+  config: |
+    receivers:
+      otlp:
+        protocols:
+          grpc: # <1>
+            endpoint: 0.0.0.0:4317
+    exporters:
+      prometheus: # <2>
+        endpoint: 0.0.0.0:8889
+    connectors:
+      count:
+
+    service:
+      pipelines:
+        traces/in:
+          receivers: [otlp]
+          exporters: [count] # <3>
+        metrics/out:
+          receivers: [count] # <4>
+          exporters: [prometheus]
+----
+<1> Example configuration for OTLP receiver.
+<2> Example configuration for Prometheus metrics exporter.
+<3> The Count Connector is used here as an exporter to receive all the spans.
+<4> The Count Connector is used here as a receiver to emit the generated metrics.
+
+.Count Connector default behavior
+[options="header"]
+[cols="a,a,a"]
+|===
+| Exporter Pipeline Type | Description | Default Metric Names
+
+| traces
+| Counts all spans and span events.
+| `trace.span.count`, `trace.span.event.count`
+
+| metrics
+| Counts all metrics and data points.
+| `metric.count`, `metric.datapoint.count`
+
+| logs
+| Counts all log records.
+| `log.record.count`
+|===
+
+=== Custom counts
+
+You can define custom counts for the `spans`, `spanevents`, `metrics`, `datapoints`, and `logs` telemetry types.
+
+For instante, the Count Connector allows the creation of metrics based on conditions:
+.OpenTelemetry Collector custom resource with an enabled Count Connector using conditions
+[source,yaml]
+----
+  config: |
+    connectors:
+      count:
+        spans:
+          cluster.prod.event.count:
+            description: Number of spans from the dev environment
+            conditions:
+              - 'attributes["env"] == "dev"'
+              - 'name == "devevent"'
+----
+
+You can count `spans`, `spanevents`, `datapoints`, and `logs` according to attributes:
+.OpenTelemetry Collector custom resource with an enabled Count Connector counting according to attributes
+[source,yaml]
+----
+  config: |
+    connectors:
+      count:
+        logs:
+          my.log.count:
+            description: The number of logs from each environment.
+            attributes:
+              - key: env
+                default_value: unknown # <1>
+----
+<1> `default_value` defines a default value when the attribute is not set.
+
+=== Troubleshooting
+
+==== Count metrics not being generated as expected
+
+If the Count Connector is not generating the expected metrics, consider the following:
+
+.Procedure
+
+- Verify the pipeline configuration: ensure the Count Connector is correctly configured as an exporter or receiver in the pipeline. Check that telemetry data flows through the connector as expected.
++
+- Check conditions: if using conditions for counting specific spans, metrics, or logs, verify that the conditions are correctly specified in the configuration.
++
+- Confirm attribute configuration: if counting by attributes, ensure that the attribute keys are present in the telemetry data and that the `default_value` is correctly defined for missing attributes.
++
+- Check telemetry input: verify that the OpenTelemetry Collector is receiving the expected spans, metrics, and logs. Use the `Debug Exporter` to inspect the incoming telemetry data.
++
+- Validate metric names: ensure that custom metric names are correctly specified in the configuration and match the data you want to count.
++
+- Ensure proper exporter configuration: confirm that the Count Connector is exporting the generated metrics to the correct exporter (e.g., Prometheus).
++
+- Verify condition syntax: check that the conditions are correctly written and follow the required syntax for attribute matching or telemetry field conditions.
+
+
 [id="routing-connector_{context}"]
 == Routing Connector
 
