CNV#34780: wasp for swap

--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -68,6 +68,14 @@ This release adds new features and enhancements related to the following compone
 [id="virt-4-17-virtualization"]
 === Virtualization
 
+//CNV-34780 GA: Safe memory overcommitment using WASP
+* You can now increase VM workload density on nodes by overcommitting memory (RAM) with the `wasp-agent`. The wasp agent assigns swap resources to worker nodes and manages pod evictions when nodes are at risk.
++
+[NOTE]
+====
+Overcommitting memory on a highly utilized system can decrease workload performance.
+====
+
 //CNV-30590 NEW GA Host-side USB passthrough
 * As a cluster administrator, you can xref:../../virt/virtual_machines/advanced_vm_management/virt-configuring-usb-host-passthrough.adoc#virt-configuring-usb-host-passthrough[expose USB devices in a cluster], making them available for virtual machine (VM) owners to assign to VMs. You expose a USB device by first enabling host passthrough and then configuring the VM to access the USB device.
 
