Updated the release notes to indicate that the known issue has been resolved.
Signed-off-by: John Wilkins <jowilkin@redhat.com>

--- a/release_notes/ocp-4-16-release-notes.adoc
+++ b/release_notes/ocp-4-16-release-notes.adoc
@@ -3261,9 +3261,6 @@ In the following tables, features are marked with the following statuses:
 
 * For a bonding network interface that holds a `br-ex` bridge device, do not set the `mode=6 balance-alb` bond mode in a node network configuration. This bond mode is not supported on {product-title} and it can cause the Open vSwitch (OVS) bridge device to disconnect from your networking environment. (link:https://issues.redhat.com/browse/OCPBUGS-34430[*OCPBUGS-34430*])
 
-// HCIDOCS-365 - This issue should be fixed soon, in a 4.16.z release
-* Do not update firmware for the `BareMetalHosts` (BMH) resource by editing the `HostFirmwareComponents` resource. Otherwise, the BMH remains in the `Preparing` state and executes the firmware update repeatedly. There is no workaround. (link:https://issues.redhat.com/browse/OCPBUGS-35559[*OCPBUGS-35559*])
-
 // HCIDOCS-371
 * Deploying an installer-provisioned cluster on bare metal fails when a proxy is used. A service in the bootstrap virtual machine cannot access IP address `0.0.0.0` through the proxy because of a regression bug. As a workaround, add `0.0.0.0` to the `noProxy` list. For more information, see xref:../installing/installing_bare_metal_ipi/ipi-install-installation-workflow.adoc#ipi-install-setting-proxy-settings-within-install-config_ipi-install-installation-workflow[Setting proxy settings]. (link:https://issues.redhat.com/browse/OCPBUGS-35818[*OCPBUGS-35818*])
 
@@ -3615,6 +3612,8 @@ $ oc adm release info 4.16.11 --pullspecs
 * Previously, for egress IP, if an IP is assigned to an egress node and it is deleted, then pods selected by that `egressIP` might have incorrect routing information to that egress node. With this release, the issue is fixed. (link:https://issues.redhat.com/browse/OCPBUGS-38705[*OCPBUGS-38705*])
 
 * Previously, the installation program failed to install an {product-title} cluster in the `eu-es` (Madrid, Spain) region on a {ibm-power-server-title} platform that is configured as an `e980` system type. With this release, the installation program no longer fails to install a cluster in this environment. (link:https://issues.redhat.com/browse/OCPBUGS-38502[*OCPBUGS-38502*])
+
+* Previously, updating the firmware for the `BareMetalHosts` (BMH) resource by editing the `HostFirmwareComponents` resource would result in the BMH remaining in the `Preparing` state such that it would execute the firmware update repeatedly. This issue has been resolved. (link:https://issues.redhat.com/browse/OCPBUGS-35559[*OCPBUGS-35559*])
 
 [id="ocp-4-16-11-updating_{context}"]
 ==== Updating
