--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -114,6 +114,8 @@ To access the new view, navigate to *Administrator* -> *Virtualization* in the w
 
 * xref:../../virt/virtual_machines/virt-edit-vms.adoc#virt-hot-plugging-memory_virt-edit-vms[Hot plugging memory] for VMs from the web console is now generally available.
 
+* xref:../../virt/virtual_machines/virt-edit-vms.adoc#virt-hot-plugging-cpu_virt-edit-vms[Hot plugging CPUs] for VMs from the web console is now generally available.
+
 //[id="virt-4-17-monitoring"]
 //=== Monitoring
 
